# libtimedautomata

./: CMakeLists.txt  oss-pkg-info.yaml
include/: discriminator.h  output_generator.h  state.h  timed_block_list.h
src/: discriminator.hpp  output_generator.hpp
